samples/_failures_safe/1761471618_78f003_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_28034f1f.c: In function ‘main’:
./samples/SAFE/__tmp_28034f1f.c:181:5: error: expected expression at end of input
  181 |     if (len > 0 && input[len -
      |     ^~
./samples/SAFE/__tmp_28034f1f.c:181:5: error: expected declaration or statement at end of input
